       Regression (r256011): http/tests/resourceLoadStatistics/aggregate-sorted-data-no-storage-access.html is consistently failing        https://bugs.webkit.org/show_bug.cgi?id=207382        <rdar://problem/59259844>

Source/WebKit:

       Sort the resource load statistics dumping results so they consistently
       print in the same order.

Reviewed by Yusuke Suzuki.

* NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
(WebKit::ResourceLoadStatisticsMemoryStore::dumpResourceLoadStatistics):

LayoutTests:

Reviewed by Yusuke Suzuki.

Updated test expectations to reflect new sorting.

* http/tests/resourceLoadStatistics/aggregate-sorted-data-no-storage-access-expected.txt:
* http/tests/resourceLoadStatistics/count-third-party-script-import-in-worker-expected.txt:
* http/tests/resourceLoadStatistics/count-third-party-script-loads-expected.txt:
* http/tests/resourceLoadStatistics/log-delayed-client-side-redirects-expected.txt:
* http/tests/resourceLoadStatistics/website-data-removal-for-site-navigated-to-with-link-decoration-expected.txt:
* http/tests/storageAccess/aggregate-sorted-data-with-storage-access-expected.txt:


Canonical link: https://commits.webkit.org/220400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256055 268f45cc-cd09-0410-ab3c-d52691b4dbfc